syntax = "proto3";

package marketplace;
option go_package = "github.com/aitsvet/saga_example/pkg/mp";

import "google/api/annotations.proto";

service Marketplace {
    rpc Deposit(DepositRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/deposit",
            body: "*"
        };
    }
    rpc Balance(BalanceRequest) returns (BalanceResponse) {
        option (google.api.http) = {
            post: "/v1/balance",
            body: "*"
        };
    }
    rpc CreateAd(AdRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/ad",
            body: "*"
        };
    }
    rpc ListAds(ListAdsRequest) returns (stream AdResponse) {
        option (google.api.http) = {
            get: "/v1/ads"
        };
    }
    rpc Order(OrderRequest) returns (Empty) {
        option (google.api.http) = {
            post: "/v1/ad/{ad_id}/order",
            body: "*"
        };
    }
    rpc ListOrders(ListOrdersRequest) returns (stream OrderResponse) {
        option (google.api.http) = {
            get: "/v1/orders"
        };
    }
    rpc Confirm(DecisionRequest) returns (Empty) {
        option (google.api.http) = {
            get: "/v1/orders/{order_id}/confirm"
        };
    }
    rpc Decline(DecisionRequest) returns (Empty) {
        option (google.api.http) = {
            get: "/v1/orders/{order_id}/decline"
        };
    }
 }

 message Empty {}

 message DepositRequest {
     uint64 user_id = 1;
     uint64 amount = 2;
 }

 message BalanceRequest {
    uint64 user_id = 1;
 }

 message BalanceResponse {
     uint64 user_id = 1;
     uint64 amount = 2;
 }

 message AdRequest {
     string product_name = 1;
     uint64 price = 2;
     uint64 seller_id = 3;
 }

message ListAdsRequest {
    optional string substring = 1;
    optional uint64 seller_id = 2;
}

message AdResponse {
    uint64 ad_id = 1;
    uint32 status = 2;
    AdRequest props = 3;
}

message OrderRequest {
    uint64 ad_id = 1;
    uint64 buyer_id = 2;
}

message ListOrdersRequest {
    oneof user_id {
        uint64 seller_id = 1;
        uint64 buyer_id = 2;
    }
}

message OrderResponse {
    uint64 order_id = 1;
    uint32 status = 2;
    OrderRequest props = 3;
}

message DecisionRequest {
    uint64 order_id = 1;
    uint64 seller_id = 2;
}

message Dictionary {
    repeated Entry entries = 1;
    message Entry {
        uint32 id = 1;   // 0
        string code = 2; // UNKNOWN
        string title = 3; // Неизвестно
    }
}
